objects/FLODocs__Deployment_Test_Failure__c.object
<CustomObject>
    <description>Detailed information about a single unit test failure during deployment.</description>
    <fields>
        <fullName>FLODocs__Class_Name__c</fullName>
        <description>Name of the unit test class that failed.</description>
        <inlineHelpText>Name of the unit test class that failed.</inlineHelpText>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Composite_Key__c</fullName>
        <description>Unique identifier for this test failure record in this deployment.</description>
        <inlineHelpText>Unique identifier for this test failure record in this deployment.</inlineHelpText>
        <label>Composite Key</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Log__c</fullName>
        <description>The Deployment Log of the deployment that resulted in the Unit Test failure.</description>
        <inlineHelpText>The Deployment Log of the deployment that resulted in the Unit Test failure.</inlineHelpText>
        <label>Deployment Log</label>
        <referenceTo>FLODocs__Deplyoment_Log__c</referenceTo>
        <relationshipLabel>Deployment Test Failures</relationshipLabel>
        <relationshipName>Deployment_Test_Failures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLODocs__Message__c</fullName>
        <description>Unit test failure message.</description>
        <inlineHelpText>Unit test failure message.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Method_Name__c</fullName>
        <description>Name of the unit test method that failed.</description>
        <inlineHelpText>Name of the unit test method that failed.</inlineHelpText>
        <label>Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Namespace__c</fullName>
        <description>Namespace prefix of the package that owns the unit test.</description>
        <inlineHelpText>Namespace prefix of the package that owns the unit test.</inlineHelpText>
        <label>Namespace</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Stack_Trace__c</fullName>
        <description>Stack Trace of the unit test failure.</description>
        <inlineHelpText>Stack Trace of the unit test failure.</inlineHelpText>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Deployment Test Failure</label>
    <nameField>
        <displayFormat>DTF-{000000}</displayFormat>
        <label>Deployment Test Failure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Test Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>